chore: make lint happy

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,9 +1,10 @@
 linters-settings:
   errcheck:
-    ignore: fmt:.*,io/ioutil:^Read.*
     ignoretests: true
     exclude-functions:
-      - github.com/fumiama/WireGold/helper.(*Writer).Write.*
+      - fmt:.*
+      - io/ioutil:^Read.*
+      - github.com/fumiama/WireGold/helper.(*Writer).(Write.*)
       - github.com/fumiama/WireGold/upper/services/tunnel.(*Tunnel).(Write|Read)
 
   goimports:
