--- a/.golangci.yml
+++ b/.golangci.yml
@@ -66,7 +66,7 @@ run:
 # output configuration options
 output:
   formats:
-    - 'colored-line-number'
+    - format: "colored-line-number"
   print-issued-lines: true
   print-linter-name: true
   uniq-by-line: true
