--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,6 +5,7 @@ linters-settings:
     exclude-functions:
       - (*os.File).Write
       - (*github.com/fumiama/WireGold/helper.Writer).Write
+      - (*github.com/fumiama/WireGold/helper.Writer).WriteByte
       - (*github.com/fumiama/WireGold/upper/services/tunnel.Tunnel).Write
       - (*github.com/fumiama/WireGold/upper/services/tunnel.Tunnel).Read
 
