feat(p2p): add ip

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         run: go build -v ./...
 
       - name: Test
-        run: go test $(go list ./...)
+        run: sudo go test $(go list ./...) # ip test needs sudo
 
   lint:
     name: Lint
