fix(ci): debug log printing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,15 @@ jobs:
 
       - name: Get dependencies
         run: go mod tidy
+      
+      - name: Enable Debug Log
+        run: sed -i '' 's/false/true/g' config/global.go
 
       - name: Build
         run: go build -v ./...
 
       - name: Test
-        run: sudo go test -ldflags "-X github.com/fumiama/WireGold/config.ShowDebugLog=true" $(go list ./...) # ip test needs sudo
+        run: sudo go test $(go list ./...) # ip test needs sudo
 
   lint:
     name: Lint
