feat(head): use uniform head extract & crc64 -> md5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Get dependencies
         run: go mod tidy
       
-      - name: Enable Debug Log
+      - name: Enable debug log
         run: sed -i 's/false/true/g' config/global.go
 
       - name: Build
