--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
         run: sed -i 's/false/true/g' config/global.go
 
       - name: Build
-        run: go build -v ./...
+        run: go build -checklinkname=0 -v ./...
 
       - name: Test
-        run: sudo go test $(go list ./...) # ip test needs sudo
+        run: sudo go test -checklinkname=0 $(go list ./...) # ip test needs sudo
 
   lint:
     name: Lint
