--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Set up Go 1.x
         uses: actions/setup-go@master
         with:
-          go-version: ^1.20
+          go-version: ^1.23
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@master
@@ -23,10 +23,10 @@ jobs:
         run: sed -i 's/false/true/g' config/global.go
 
       - name: Build
-        run: go build -checklinkname=0 -v ./...
+        run: go build -ldflags=-checklinkname=0 -v ./...
 
       - name: Test
-        run: sudo go test -checklinkname=0 $(go list ./...) # ip test needs sudo
+        run: sudo go test -ldflags=-checklinkname=0 $(go list ./...) # ip test needs sudo
 
   lint:
     name: Lint
@@ -35,7 +35,7 @@ jobs:
       - name: Set up Go 1.x
         uses: actions/setup-go@master
         with:
-          go-version: ^1.20
+          go-version: ^1.23
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@master
